--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "antd": "^4.16.13"
+    "antd": "^4.16.13",
+    "eslint-plugin-react": "^7.26.1"
   }
 }
