--- a/package.json
+++ b/package.json
@@ -62,5 +62,6 @@
     "eslint-plugin-react": "^7.26.1",
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0"
-  }
+  },
+  "proxy": "http://192.168.89.39:8081"
 }
