--- a/package.json
+++ b/package.json
@@ -63,5 +63,5 @@
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0"
   },
-  "proxy": "http://192.168.89.39:8081"
+  "proxy": "http://221.216.95.120:10180/goods-api/"
 }
