--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "typescript": "^4.4.4",
+    "use-deep-compare-effect": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
